Unit tests added

--- a/ooresults/templates/clubs_table.html
+++ b/ooresults/templates/clubs_table.html
@@ -1,6 +1,6 @@
 $def with (clubs)
 
-<input oninput="w3.filterHTML('#clubs_tbody', 'tr', this.value)" placeholder="Search ...">
+<input id="club.filter" oninput="w3.filterHTML('#clubs_tbody', 'tr', this.value)" placeholder="Search ...">
 <p/>
 
 <table class="dt" id="clb.table" onclick="clb_highlight(event)">
