--- a/ooresults/templates/classes_table.html
+++ b/ooresults/templates/classes_table.html
@@ -27,18 +27,18 @@ $def format_voided_legs(legs):
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$(event.name if event is not None else '')</td>
+            <td id="clas.event_name">$(event.name if event is not None else '')</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(event.date.isoformat() if event is not None else '')</td>
+            <td id="clas.event_date">$(event.date.isoformat() if event is not None else '')</td>
         </tr>
     </table>
 </div>
 
 <p/>
 
-<input oninput="w3.filterHTML('#classes_tbody', 'tr', this.value)" placeholder="Search ...">
+<input id="clas.filter" oninput="w3.filterHTML('#classes_tbody', 'tr', this.value)" placeholder="Search ...">
 <p/>
 
 <div>
