--- a/ooresults/templates/courses_table.html
+++ b/ooresults/templates/courses_table.html
@@ -5,18 +5,18 @@ $def with (event, courses)
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$(event.name if event is not None else '')</td>
+            <td id="cour.event_name">$(event.name if event is not None else '')</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(event.date.isoformat() if event is not None else '')</td>
+            <td id="cour.event_date">$(event.date.isoformat() if event is not None else '')</td>
         </tr>
     </table>
 </div>
 
 <p/>
 
-<input oninput="w3.filterHTML('#courses_tbody', 'tr', this.value)" placeholder="Search ...">
+<input id="cour.filter" oninput="w3.filterHTML('#courses_tbody', 'tr', this.value)" placeholder="Search ...">
 <p/>
 
 <div>
