--- a/ooresults/templates/competitors_table.html
+++ b/ooresults/templates/competitors_table.html
@@ -1,29 +1,34 @@
 $def with (competitors)
 
-<input oninput="w3.filterHTML('#competitors_tbody', 'tr', this.value)" placeholder="Search ..."/>
+<input id="comp.filter" oninput="filter_table('comp.table', 'tr', this.value)" placeholder="Search ..."/>
 <p/>
 
-<table class="dt" id="comp.table" onclick="comp_highlight(event)">
+<table class="dte" id="comp.table" onclick="comp_highlight(event)">
     <thead>
-        <tr class="dt">
-            <th class="dt">First name</th>
-            <th class="dt">Last name</th>
-            <th class="dt">Gender</th>
-            <th class="dt">Year</th>
-            <th class="dt">Chip</th>
-            <th class="dt">Club</th>
+        <tr id="comp.theader" class="dth">
+            <th class="dth">First name</th>
+            <th class="dth">Last name</th>
+            <th class="dth">Gender</th>
+            <th class="dth">Year</th>
+            <th class="dth">Chip</th>
+            <th class="dth">Club</th>
         </tr>
     </thead>
     <tbody id="competitors_tbody">
-    $for competitor in competitors:
-        <tr class="dt" id="$competitor.id">
-            <td class="dt">$competitor.first_name</td>
-            <td class="dt">$competitor.last_name</td>
-            <td class="dt">$competitor.gender</td>
-            <td class="dt">$(str(competitor.year) if competitor.year is not None else '')</td>
-            <td class="dt" style="text-align:right">$(competitor.chip if competitor.chip else "")</td>
-            <td class="dt">$(competitor.club_name if competitor.club_name else "")</td>
-        </tr> 
+        $if competitors:
+            $ name = "Competitors&nbsp;&nbsp;(" + str(len(competitors)) + ")"
+            <tr class="dte h1">
+                <th class="dte h1" colspan="99">$:name</th>
+            </tr>
+            $for competitor in competitors:
+                <tr class="dte" id="$competitor.id">
+                    <td class="dte">$competitor.first_name</td>
+                    <td class="dte">$competitor.last_name</td>
+                    <td class="dte">$competitor.gender</td>
+                    <td class="dte">$(str(competitor.year) if competitor.year is not None else '')</td>
+                    <td class="dte" style="text-align:right">$(competitor.chip if competitor.chip else "")</td>
+                    <td class="dte">$(competitor.club_name if competitor.club_name else "")</td>
+                </tr>
     </tbody>
 </table>
 
