--- a/ooresults/templates/main.html
+++ b/ooresults/templates/main.html
@@ -50,7 +50,7 @@ $:clubs_tab_content
 
 
 <script>
-    var event_id = "";
+    var event_id = null;
     
     function openTab(evt, tabName) {
         // Declare all variables
