--- a/ooresults/templates/base.html
+++ b/ooresults/templates/base.html
@@ -9,6 +9,7 @@ $def with (page)
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <script src="mystatic/w3.js"></script>
+    <script src="mystatic/filter.js"></script>
 </head>
 <body style="margin: 0px;" onpageshow="myfunction()">
 
