--- a/ooresults/templates/classes_tab_content.html
+++ b/ooresults/templates/classes_tab_content.html
@@ -2,7 +2,7 @@ $def with (classes_table)
  
 <!-- Tab content -->
 <div id="Classes" class="tabcontent">
-  <div class="actions">
+  <div id="clas.actions" class="actions">
     <!-- Trigger/Open The Modal -->
     <button id="cls.myBtnReload" onclick="cls_update()">Reload</button>
     <button id="cls.myBtnImport" onclick="cls_myImport()">Import ...</button>
@@ -304,6 +304,14 @@ $def with (classes_table)
         xhr.send(data);
     }
 
+    function set_clas_table_header_top() {
+        h = document.getElementById('clas.actions').offsetHeight;
+        document.getElementById('clas.theader').style.top = h - 1;
+
+    }
+
+    new ResizeObserver(set_clas_table_header_top).observe(document.getElementById('clas.actions'));
+
     function cls_updateTable(content) {
         // Get all elements with class="modal" and hide them
         modal = document.getElementsByClassName("modal");
@@ -313,5 +321,6 @@ $def with (classes_table)
         document.getElementById('cls.data').innerHTML = content;
         document.getElementById('cls.myBtnEdit').disabled = true;
         document.getElementById('cls.myBtnDelete').disabled = true;
+        set_clas_table_header_top();
     }
 </script>
