--- a/ooresults/templates/courses_tab_content.html
+++ b/ooresults/templates/courses_tab_content.html
@@ -2,7 +2,7 @@ $def with (courses_table)
  
 <!-- Tab content -->
 <div id="Courses" class="tabcontent">
-  <div class="actions">
+  <div id="cour.actions" class="actions">
     <!-- Trigger/Open The Modal -->
     <button id="cou.myBtnReload" onclick="cou_update()">Reload</button>
     <button id="cou.myBtnImport" onclick="cou_myImport()">Import ...</button>
@@ -304,6 +304,14 @@ $def with (courses_table)
         xhr.send(data);
     }
 
+    function set_cour_table_header_top() {
+        h = document.getElementById('cour.actions').offsetHeight;
+        document.getElementById('cour.theader').style.top = h - 1;
+
+    }
+
+    new ResizeObserver(set_cour_table_header_top).observe(document.getElementById('cour.actions'));
+
     function cou_updateTable(content) {
         // Get all elements with class="modal" and hide them
         modal = document.getElementsByClassName("modal");
@@ -313,5 +321,6 @@ $def with (courses_table)
         document.getElementById('cou.data').innerHTML = content;
         document.getElementById('cou.myBtnEdit').disabled = true;
         document.getElementById('cou.myBtnDelete').disabled = true;
+        set_cour_table_header_top();
     }
 </script>
