--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -2,7 +2,7 @@ $def with (entries_table)
  
 <!-- Tab content -->
 <div id="Entries" class="tabcontent">
-  <div class="actions">
+  <div id="entr.actions" class="actions">
     <!-- Trigger/Open The Modal -->
     <button id="entr.myBtnReload" onclick="entr_update()">Reload</button>
     <button id="entr.myBtnImport" onclick="entr_myImport()">Import ...</button>
@@ -171,7 +171,13 @@ $def with (entries_table)
 
 
 <script>
-    var entr_comp_selected = document.getElementById('entry.comp.table').getElementsByClassName('selected')[0];
+    var entr_view = "entries";
+    var entr_comp_selected = null;
+
+    function entr_reload_view(self) {
+        entr_view = self.value;
+        entr_update();
+    }
 
     function entr_comp_highlight(e) {
         if (e.target.tagName == "TD") {
@@ -341,6 +347,7 @@ $def with (entries_table)
         var form = document.getElementById('entr.import.form');
         var data = new FormData(form);
         data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
@@ -366,6 +373,7 @@ $def with (entries_table)
         var form = document.getElementById('entr.export.form');
         var data = new FormData(form);
         data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         var selected = document.querySelector('input[name="entr_export"]:checked').value;
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
@@ -409,6 +417,7 @@ $def with (entries_table)
         var form = document.getElementById('entr.formAdd');
         var data = new FormData(form);
         data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
@@ -432,6 +441,7 @@ $def with (entries_table)
         var form = document.getElementById('entr.formDelete');
         var data = new FormData(form);
         data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
@@ -453,9 +463,13 @@ $def with (entries_table)
 
     function entr_update() {
         var xhr = new XMLHttpRequest();
+        var data = new FormData();
+        data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
+                entr_updateTable(this.responseText);
+                document.getElementById('entr.view').value = entr_view;
             }
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
@@ -470,9 +484,16 @@ $def with (entries_table)
             window.alert("Network error");
         };
         xhr.open("POST", "entry/update", true);
-        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
-        xhr.send("event_id=".concat(window.event_id));
+        xhr.send(data);
     }
+
+    function set_entr_table_header_top() {
+        h = document.getElementById('entr.actions').offsetHeight;
+        document.getElementById('entr.theader').style.top = h - 1;
+
+    }
+
+    new ResizeObserver(set_entr_table_header_top).observe(document.getElementById('entr.actions'));
 
     function entr_updateTable(content) {
         // Get all elements with class="modal" and hide them
@@ -484,6 +505,7 @@ $def with (entries_table)
         document.getElementById('entr.myBtnEdit').disabled = true;
         document.getElementById('entr.myBtnDelete').disabled = true;
         document.getElementById('entr.myBtnResult').disabled = true;
+        set_entr_table_header_top();
     }
 
     function tUpdateRows() {
@@ -696,6 +718,7 @@ $def with (entries_table)
         var form = document.getElementById('entr.formSplitTimes');
         var data = new FormData(form);
         data.append('event_id', window.event_id);
+        data.append('view', entr_view);
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
