Fixed non-working filter on the Clubs tab

--- a/ooresults/templates/clubs_table.html
+++ b/ooresults/templates/clubs_table.html
@@ -1,6 +1,6 @@
 $def with (clubs)
 
-<input id="club.filter" oninput="filter_table('clb.table, 'tr', this.value)" placeholder="Search ...">
+<input id="club.filter" oninput="filter_table('clb.table', 'tr', this.value)" placeholder="Search ...">
 <p/>
 
 <table class="dte" id="clb.table" onclick="clb_highlight(event)">
