Function 'Show result ...' of tab Entries renamed to 'Edit split times ...'

--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -10,7 +10,7 @@ $def with (entries_table)
     <button id="entr.myBtnAdd" onclick="entr_myAdd()">Add entry ...</button>
     <button id="entr.myBtnEdit" disabled onclick="entr_myEdit()">Edit entry ...</button>
     <button id="entr.myBtnDelete" disabled onclick="entr_myDelete()">Delete entry</button>
-    <button id="entr.myBtnResult" disabled onclick="entr_myResult()">Show result ...</button>
+    <button id="entr.myBtnResult" disabled onclick="entr_myResult()">Edit split times ...</button>
   </div>
 
   <div id="entr.results" class="data">
